@@ -11,13 +11,13 @@ Feature: Editor - Basics
   @_done @m1 @i2 @p3
   Scenario: Updating feature contennt
 
-  @_todo @m2 @i2
+  @_wip @m2 @i2
   Scenario: Moving feature to other directory
 
-  @_todo @m2 @i2
+  @_wip @m2 @i2
   Scenario: Renaming filename
 
-  @_todo @m2 @i2
+  @_done @m2 @i2
   Scenario: Deleting feature
 
   @_done @m1 @i4
